# nix-poetry-app

./: pyproject.toml
app/: __init__.py
